# datacake

./: .gitignore  Cargo.toml
datacake-cluster/: Cargo.toml
datacake-cluster/src/: core.rs  error.rs  lib.rs  node.rs  node_identifier.rs  nodes_selector.rs  storage.rs  test_utils.rs
datacake-cluster/src/keyspace/: actor.rs
datacake-cluster/src/replication/: distributor.rs  mod.rs  poller.rs
datacake-cluster/src/rpc/: chitchat_transport.rs  client.rs  datacake_api.rs  network.rs
datacake-cluster/src/rpc/server/: consistency_impl.rs
datacake-cluster/tests/: basic_connect.rs  dynamic_membership.rs  multi_node_cluster.rs  multiple_keyspace.rs  single_node_cluster.rs
datacake-crdt/src/: timestamp.rs
datacake-sled/: Cargo.toml
datacake-sled/src/: error.rs  lib.rs  utils.rs
datacake-sled/tests/: basic_cluster.rs
datacake-sqlite/: Cargo.toml
datacake-sqlite/src/: lib.rs
datacake-sqlite/tests/: basic_cluster.rs
examples/replicated-kv/: Cargo.toml  README.md
examples/replicated-kv/scripts/: store-many-docs.py
examples/replicated-kv/src/: main.rs
my-data/node-1-data/: snap.00000000000BC7A7  snap.00000000003E2446
my-data/node-2-data/: snap.00000000000BC73B  snap.00000000026E3DEA
my-data/node-3-data/: snap.00000000000BA60B  snap.00000000003506BA
