[package]
name = "replicated-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6.1"
num_cpus = "1.14.0"
crc32fast = "1.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures = "0.3"
serde_json = "1.0.89"

serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
datacake-sled = {path ="../../datacake-sled"}
datacake = { version = "0.1", path = "../.." }
sled = "0.34"

jemallocator = {version = "0.5.0"}
[dev-dependencies]
datacake = { version = "0.1", path = "../..", features = ["test-utils"] }
