[package]
name = "replicated-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
num_cpus = "1.14.0"
crc32fast = "1.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures = "0.3"
serde_json = "1.0.89"

serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
datacake-sled = {path ="../../datacake-sled"}
datacake = { version = "0.1", path = "../.." }
sled = "0.34"
axum = {version = "0.6.1", features = [ "headers"]}
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
    "map-request-body", "util"
] }
jemallocator = {version = "0.5.0"}
age = "0.9"
[dev-dependencies]
datacake = { version = "0.1", path = "../..", features = ["test-utils"] }
